remplissage du select du form avec la BDD

--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -18,6 +18,7 @@
                 <li><a href="/">Accueil</a></li>
                 <li><a href="/promos">Promos</a></li>
                 <li><a href="/promos/create">Créer une promo</a></li>
+                <li><a href="/students/create">Créer un.e étudiant.e</a></li>
             </ul>
         </nav>
     </header>
