--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,5 +1,7 @@
 <%- include('./partials/header.ejs') %>
 
-<h1>Hello</h1>
+<h1>
+  Hello <%= username %>
+</h1>
 
 <%- include('./partials/footer.ejs') %>
