--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -18,7 +18,8 @@
                 <li><a href="/">Accueil</a></li>
                 <li><a href="/promos">Promos</a></li>
                 <li><a href="/promos/create">Créer une promo</a></li>
-                <li><a href="/students/create">Créer un.e étudiant.e</a></li>
+                <li><a href="/students/create">Créer un étudiant</a></li>
+                <li><a href="/login">Se connecter</a></li>
             </ul>
         </nav>
     </header>
