--- a/app/views/student/create.ejs
+++ b/app/views/student/create.ejs
@@ -1,31 +1,33 @@
 <%- include('./../partials/header.ejs') %>
+<h1>Ajouter un étudiant</h1>
 
-<h1>Ajouter un.e étudiant.e</h1>
+<!-- <%= JSON.stringify(promos, null, 2) %> -->
 
 <form method="POST">
-	<p>
-		<label for="promo">Promo</label>
-		<select name="promo_id" id="promo">
-			<% promos.forEach(promo => { %>
-				<option value="<%= promo.id %>"><%= promo.name %></option>
-			<% }) %>
-		</select>
-	</p>
-	<p>
-		<label>Prénom</label>
-		<input type="text" name="first_name" value="Prénom" />
-	</p>
-	<p>
-		<label>Nom</label>
-		<input type="text" name="last_name" value="Nom" />
-	</p>
-	<p>
-		<label>Pseudo Github</label>
-		<input type="text" name="github_username" value="PrenomNom" />
-	</p>
-	<p>
-		<button type="submit">Valider</button>
-	</p>
+    <p>
+        <label for="promo">Promo</label>
+        <select name="promo_id" id="promo">
+            <% promos.forEach(promo => { %>
+                <option value="<%= promo.id %>">
+                    <%= promo.name %>
+                </option>
+            <% }) %>
+        </select>
+    </p>
+    <p>
+        <label>Prénom</label>
+        <input type="text" name="first_name" value="">
+    </p>
+    <p>
+        <label>Nom</label>
+        <input type="text" name="last_name" value="">
+    </p>
+    <p>
+        <label>Pseudo Github</label>
+        <input type="text" name="github_username" value="">
+    </p>
+    <p>
+        <button type="submit">Valider</button>
+    </p>
 </form>
-
 <%- include('./../partials/footer.ejs') %>
